k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gp-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: gp-dev
